--- a/Proyecto/MainPage.xaml
+++ b/Proyecto/MainPage.xaml
@@ -30,6 +30,7 @@
                 Text="¡Nos encanta la moda!"
                 FontFamily="Montserrat"
                 FontAttributes="Italic"
+                TextColor="Black"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
